--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "webpack  --env mode=production",
     "build:dev": "webpack  --env mode=development",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
   },
   "devDependencies": {
     "@types/node": "^18.7.19",
