--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "typescript": "*",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "file-loader": "^6.2.0"
   },
   "dependencies": {
     "react": "^18.2.0",
